# object_manipulation

./: README.md
src/manipulation_bringup/: CMakeLists.txt  package.xml
src/manipulation_bringup/launch/: robotis_object_manipulation.launch  wheelchair_object_manipulation.launch
src/preprocessing/: CMakeLists.txt  README.md  package.xml
src/preprocessing/src/: preprocessing.cpp
src/preprocessing/src/yaml/: wheelchair.yaml
src/unknown_object_grasping/: CMakeLists.txt  README.md  package.xml
src/unknown_object_grasping/src/: unknown_object_grasping.cpp
